--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-    /* ==== A SIMPLE CSS RESET FROM ERIC MEYER ==== */
+/* ==== A SIMPLE CSS RESET FROM ERIC MEYER ==== */
 
 html,
 body,
@@ -134,24 +134,6 @@ table {
 }
 
 
-/* ==== HELPER COLORS FOR LAYOUT ==== */
-
-
-/*
-.main-header {
-	background-color: rgba(255, 248, 53, .3);
-}
-
-.primary-content {
-	background-color: rgba(140, 96, 255, .3);
-}
-
-.post {
-	background-color: rgba(255, 0, 0, .3);
-}
-*/
-
-
 /* Demonstrational Styles */
 
 * {
@@ -209,78 +191,99 @@ img,
         height: 100%;
         width: 33.3%;
     }
-    @media (min-width: 1025px) {
-        .main-header {
-            width: 20.625%;
-        }
+}
+
+@media (min-width: 1025px) {
+    .main-header {
+        width: 20.625%;
     }
-    /* Primary Content Wrapper Styles */
-    @media (min-width: 768px) {
-        .primary-content {
-            float: right;
-            width: 66.6%;
-            max-width: 812px;
-        }
+}
+
+
+/* Primary Content Wrapper Styles */
+
+@media (min-width: 768px) {
+    .primary-content {
+        float: right;
+        width: 66.6%;
+        max-width: 812px;
     }
-    @media (min-width: 1025px) {
-        .primary-content {
-            float: none;
-            position: absolute;
-            left: 20.625%;
-        }
+}
+
+@media (min-width: 1025px) {
+    .primary-content {
+        float: none;
+        position: absolute;
+        left: 20.625%;
     }
-    /* Article Styles */
-    .post {
-        width: 95%;
-        margin: 0 auto 1rem;
-        padding: 0.3125rem;
-    }
-    .picture {
-        width: 100%;
-    }
-    /* ==== BASE STYLES ==== */
-    body {
-        font-family: 'Lora', 'Times New Roman', serif;
-        font-size=1.125rem;
-        ;
-        line-height: 2rem;
-        color=#333;
-    }
-    h1,
-    h2 {
-        font-family: 'Roboto', Arial, sans-serif;
-    }
-    h1 {
-        font-size: 1.8rem;
-    }
-    h2 {
-        font-size: 1.6rem;
-        color: #e5127d;
-    }
-    .main-header p {
-        font-size: 1.125rem;
-        letter-spacing: 0.125rem;
-        color: #8c8e9b;
-    }
-    /* ==== COMPONENT STYLES ==== */
-    .button {
-        display: inline-block;
-        border: 1px solid #8c8e9b;
-        color: #8c8e9b;
-        border-radius: 10px;
-        padding-right: 5px;
-        padding-left: 5px;
-        margin: 5px;
-        width: 100px;
-        font-family: 'Roboto', sans-serif;
-    }
-    .button:hover {
-        border: 1px solid #b60e63;
-    }
-    .load {
-        display: block;
-        text-align: center;
-        padding: 0.625rem;
-        font-size: 1.25rem;
-        color: #8c8e9b;
-    }
+}
+
+
+/* Article Styles */
+
+.post {
+    width: 95%;
+    margin: 0 auto 1rem;
+    padding: 0.3125rem;
+}
+
+.picture {
+    width: 100%;
+}
+
+
+/* ==== BASE STYLES ==== */
+
+body {
+    font-family: 'Lora', 'Times New Roman', serif;
+    font-size: 1.125rem;
+    line-height: 2rem;
+    color: #333;
+}
+
+h1,
+h2 {
+    font-family: 'Roboto', Arial, sans-serif;
+}
+
+h1 {
+    font-size: 1.8rem;
+}
+
+h2 {
+    font-size: 1.6rem;
+    color: #e5127d;
+}
+
+.main-header p {
+    font-size: 1.125rem;
+    letter-spacing: 0.125rem;
+    color: #8c8e9b;
+}
+
+
+/* ==== COMPONENT STYLES ==== */
+
+.button {
+    display: inline-block;
+    border: 1px solid #8c8e9b;
+    color: #8c8e9b;
+    border-radius: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin: 5px;
+    width: 100px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.button:hover {
+    border: 1px solid #b60e63;
+}
+
+.load {
+    display: block;
+    text-align: center;
+    padding: 0.625rem;
+    font-size: 1.25rem;
+    color: #8c8e9b;
+}
