--- a/main.css
+++ b/main.css
@@ -237,6 +237,7 @@ img,
 body {
     font-family: 'Lora', 'Times New Roman', serif;
     font-size: 1.125rem;
+    ;
     line-height: 2rem;
     color: #333;
 }
